--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,9 +1,23 @@
 body {
-  background-color: black;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.container {
+  margin-top: 40px;
+}
+
+.center {
+  text-align: center;
 }
 
 #gamearea {
   margin: auto;
   border: solid white;
   margin-top: 40px;
+}
+
+.left-bordered {
+  border-left: 1px solid #f1f1f1;
+  padding-left: 20px;
+  min-height: 50vh;
 }
