--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -11,13 +11,21 @@ body {
 }
 
 #gamearea {
-  margin: auto;
-  border: solid white;
-  margin-top: 40px;
+
 }
 
 .left-bordered {
   border-left: 1px solid #f1f1f1;
   padding-left: 20px;
   min-height: 50vh;
+}
+
+td, th {
+  padding-left: 20px !important;
+}
+
+td:first-child:hover {
+  background-color: #33C3F0;
+  color: #FFF;
+  cursor: pointer;
 }
