--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -11,7 +11,10 @@ body {
 }
 
 #gamearea {
-
+  border: 1px solid;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
 }
 
 .left-bordered {
